# spuriosity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: API.md  design_spec.md  v3_planning.md
examples/: 01_did_selection_bias.ipynb  01_quickstart.ipynb  02_causal_forest_vs_ols.ipynb  03_weak_instruments.ipynb  README.md
scripts/: verify_api_doc.py
src/spuriosity/: __init__.py  _rng.py  generator.py  ground_truth.py  hte.py  metrics.py  pathologies.py  reference.py  stress_test.py  synthetic_control.py  viz.py
tests/: test_causal_forest.py  test_compare_models.py  test_confounder.py  test_confounder_integration.py  test_endogeneity.py  test_endogeneity_integration.py  test_generator.py  test_ground_truth.py  test_heteroskedasticity_multicollinearity.py  test_heteroskedasticity_multicollinearity_integration.py  test_hte.py  test_hte_integration.py  test_hte_multidim.py  test_hte_multidim_integration.py  test_measurement_error.py  test_measurement_error_integration.py  test_metrics.py  test_panel_fe_re.py  test_pathologies.py  test_propensity_treatment.py  test_psm.py  test_reference.py  test_rng.py  test_selection_bias.py  test_selection_bias_integration.py  test_stress_test.py  test_stress_test_custom_metrics.py  test_structural_break_integration.py  test_synthetic_control.py  test_unit_root.py  test_unit_root_integration.py  test_viz.py  test_xgboost.py
