[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spuriosity"
version = "0.1.0"
description = "Synthetic panel/time-series data with known ground truth and injectable econometric pathologies, for stress-testing ML pipelines and causal inference methods."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Nityahapani" }
]
keywords = [
    "synthetic-data",
    "econometrics",
    "causal-inference",
    "panel-data",
    "machine-learning",
    "robustness-testing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "patsy>=0.5.6",
    "statsmodels>=0.14",
    "scipy>=1.10",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
]
sklearn = [
    "scikit-learn>=1.3",
]
doubleml = [
    "doubleml>=0.7",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Repository = "https://github.com/Nityahapani/spuriosity"

[tool.hatch.build.targets.wheel]
packages = ["src/spuriosity"]

[tool.ruff]
line-length = 100
target-version = "py310"

# Note: python_version is left unset here rather than pinned to our 3.10
# floor. Some numpy stub files use syntax only valid in newer Python
# (e.g. 3.12 `type` statements), which trips mypy's parser when a lower
# --python-version is forced, independent of anything in this package's own
# code. mypy will default to checking against the interpreter it's run
# with; CI should run it on the newest supported Python to get full
# coverage, and this is a stub-compatibility issue to revisit as the numpy
# stub / mypy ecosystem catches up, not a bug in spuriosity itself.
[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
